# oxidizedMLX

./: .gitignore  Cargo.toml  Makefile  README.md  RUST_MIGRATION_NOTES.md  SWEBENCH_IMPLEMENTATION.md  agent-brief-oxidizedMLX.md  flake.nix  justfile  strangler.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: epic.yml  metal_kernel.yml  parity_gate.yml  story.yml
.github/workflows/: ci.yml  migration-tools.yml  nix-cache.yml  swe-bench.yml
crates/migration-tools/: CONTRIBUTING.md  Cargo.toml  README.md
crates/migration-tools/src/: lib.rs  openapi.rs  strangler.rs
crates/mlx-autograd/: Cargo.toml
crates/mlx-autograd/src/: lib.rs  vjp.rs
crates/mlx-bench/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  TROUBLESHOOTING.md
crates/mlx-bench/src/: backend.rs  error.rs  lib.rs  main.rs  report.rs  runner.rs  task.rs
crates/mlx-cli/: Cargo.toml
crates/mlx-cli/src/: main.rs
crates/mlx-conformance/: Cargo.toml
crates/mlx-conformance/src/: lib.rs
crates/mlx-conformance/tests/: basic.rs  integration.rs  parity_gate.rs  ttft_behavior.rs
crates/mlx-core/: Cargo.toml
crates/mlx-core/benches/: decode_bandwidth.rs  matmul.rs  norm.rs  reductions.rs  rope.rs  ttft.rs
crates/mlx-core/src/: backend.rs  cpu_kernels.rs  graph.rs  lib.rs  schedule.rs  tensor.rs  types.rs
crates/mlx-core/tests/: attention_3d.rs  concurrency.rs  concurrency_stress.rs  cse.rs  memory_stability.rs  operator_golden.rs  quantization.rs  quantization_readiness.rs  schedule.rs
crates/mlx-cpu/: Cargo.toml
crates/mlx-cpu/src/: lib.rs
crates/mlx-ffi-backend/: Cargo.toml
crates/mlx-ffi-backend/src/: lib.rs
crates/mlx-io/: Cargo.toml
crates/mlx-io/src/: lib.rs
crates/mlx-io/tests/: safetensors_roundtrip.rs
crates/mlx-metal/: Cargo.toml  build.rs
crates/mlx-metal/benches/: gemm.rs  norm.rs  reductions.rs  rope.rs
crates/mlx-metal/src/: attention.rs  backend.rs  buffer.rs  buffers.rs  command.rs  context.rs  gemm.rs  instrument.rs  lib.rs  pipeline.rs  rope.metal  rope.rs  unified.rs
crates/mlx-metal/src/kernels/: add_f32.metal  add_u32.metal  attention.metal  elementwise.metal  gemm.metal  gemm_abt_fp16.metal  gemm_fp16.metal  norm.metal  rope_f32.metal  softmax_masked_f32.metal  softmax_masked_fp16.metal  transpose_f32.metal
crates/mlx-metal/src/metal_impl/: gemm.rs
crates/mlx-metal/tests/: attention_block_goldens.rs  attention_golden.rs  attention_perf.rs  attention_test.rs  norm_test.rs  rope_test.rs  rope_unit.rs  smoke_add_u32.rs  softmax_test.rs
crates/mlx-nn/: Cargo.toml
crates/mlx-nn/benches/: mlp.rs
crates/mlx-nn/src/: attention.rs  dropout.rs  embed.rs  embedding.rs  lib.rs  linear.rs  mlp.rs  norm.rs
crates/mlx-nn/tests/: embedding_integration.rs  integration.rs
crates/mlx-ops/: Cargo.toml
crates/mlx-ops/src/: broadcast.rs  dtype_promotion.rs  lib.rs  shape_inference.rs
crates/mlx-ops/tests/: proptest_shapes.proptest-regressions  proptest_shapes.rs
crates/mlx-optim/: Cargo.toml
crates/mlx-optim/src/: lib.rs
crates/mlx-parity/: Cargo.toml
crates/mlx-parity/src/: lib.rs
crates/mlx-parity/tests/: activations.rs  attention.rs  elementwise.rs  gate.rs  matmul.rs  normalization.rs  parity.rs  rope.rs  transpose.rs
crates/mlx-roadmap/: Cargo.toml
crates/mlx-roadmap/src/: main.rs
crates/mlx-sys/: Cargo.toml  build.rs
crates/mlx-sys/csrc/: mlxrs.h
crates/mlx-sys/src/: lib.rs  native_impl.rs
docs/: ARCHITECTURE_TDD.md  ATTACK_PLAN.md  DELIVERY_PLAN.md  MASTER_CHECKLIST.md  PARITY_MATRIX.md  REPO_CHECKLIST.md  TEST_COVERAGE_PLAN.md
docs-site/: index.html  nginx.conf.template  package.json  vite.config.ts
docs-site/src/: App.tsx  main.tsx
docs-site/src/components/: Sidebar.tsx
docs-site/src/pages/: Architecture.tsx  GettingStarted.tsx  Home.tsx
docs-site/src/pages/crates/: MlxCore.tsx  MlxCpu.tsx  MlxIo.tsx  MlxMetal.tsx  MlxNn.tsx  MlxOps.tsx  MlxSys.tsx
evals/: README.md
evals/prompts/: patch_format.txt  system_prompt.txt
evals/results/: sample_results.json
evals/tasks/: 001_softmax_axis_oob.json  002_narrow_negative_start.json  003_matmul_batch_3d.json  004_rms_norm_vjp_eps.json  005_layer_norm_zero_variance.json  006_embedding_index_oob.json  007_cat_empty_slice.json  008_broadcast_incompatible_dims.json
tools/goldens/attn/case_asym/: golden.json
tools/goldens/attn/case_medium/: golden.json
tools/goldens/attn/case_small/: golden.json
tools/lci/: lci
tools/py_ref_runner/: gen_attention_goldens.py  gen_rope_goldens.py  run.py
