[package]
name = "migration-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CI tools for API discovery and strangler-pattern metrics"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir = "2"

[[bin]]
name = "openapi-extractor"
path = "src/bin/openapi_extractor.rs"

[[bin]]
name = "strangler"
path = "src/bin/strangler.rs"
