[package]
name = "mlx-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
clap = { workspace = true }
uuid.workspace = true
chrono.workspace = true
glob.workspace = true
anyhow.workspace = true
log.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mlx-bench"
path = "src/main.rs"
