[package]
name = "mlx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust API for MLX tensors, devices, and core operations"

[dependencies]
thiserror.workspace = true
smallvec.workspace = true

[features]
default-backend-metal = []
default-backend-cpu = []
