[package]
name = "mlx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust API for MLX tensors, devices, and core operations"

[features]
default = []
metal = []
ffi = []
# When enabled, gate backend to cpu-only until parity tests pass
parity-gate = []

[dependencies]
thiserror.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "reductions"
harness = false

[[bench]]
name = "norm"
harness = false

[[bench]]
name = "rope"
harness = false
