[package]
name = "mlx-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tensor serialization: safetensors, GGUF, mmap loading"

[dependencies]
mlx-core = { path = "../mlx-core" }
safetensors = { workspace = true }
memmap2 = { workspace = true }
half = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
