[package]
name = "mlx-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Metal backend for Apple Silicon GPU acceleration"

[dependencies]
mlx-core = { path = "../mlx-core" }
smallvec.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
