[package]
name = "mlx-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Metal backend for Apple Silicon GPU acceleration"

[dependencies]
mlx-core = { path = "../mlx-core" }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"

[dev-dependencies]
smallvec = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "gemm"
harness = false
