[package]
name = "mlx-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neural network modules: Linear, LayerNorm, Attention, etc."

[dependencies]
mlx-core = { path = "../mlx-core" }
rand = { workspace = true }

[dev-dependencies]
mlx-conformance = { path = "../mlx-conformance" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mlp"
harness = false
