[package]
name = "mlx-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unsafe FFI bindings to MLX C API"

[lib]
crate-type = ["rlib"]

[dependencies]
libc.workspace = true
mlx-core = { path = "../mlx-core", optional = true }

[build-dependencies]
cmake = { version = "0.1", optional = true }
bindgen = { version = "0.71", optional = true }

[dev-dependencies]
mlx-conformance = { path = "../mlx-conformance" }

[features]
default = ["native"]
native = ["dep:mlx-core"]
cpp = ["dep:cmake"]
bindgen = ["dep:bindgen"]
